logo firmy poprzez API
